--- a/style/brands.css
+++ b/style/brands.css
@@ -1,7 +1,9 @@
 .brands__container {
   margin-top: 24px;
   @media (max-width: 768px) {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
   }
 
   @media (max-width: 320px) {
@@ -16,6 +18,11 @@
   gap: 16px 32px;
   margin-left: 32px;
   margin-bottom: 46px;
+  @media (max-width: 768px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
 }
 
 .brands__section {
@@ -26,9 +33,20 @@
   margin-bottom: 24px;
   margin-top: 24px;
   margin-left: 32px;
+  margin-top: 24px;
+  @media (max-width: 768px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  @media (max-width: 320px) {
+    display: none;
+  }
 }
 
 .brands__section--cont {
+  background-color: rgba(255, 255, 255, 1);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -56,7 +74,7 @@
   margin-left: 27px;
   gap: 0px 5px;
   border-width: 0px;
-  background-color: white;
+  background-color: rgba(248, 248, 248, 1);
   @media (min-width: 0) and (max-width: 320px) {
     display: none;
   }
