--- a/style/brands.css
+++ b/style/brands.css
@@ -1,12 +1,22 @@
 .brands__container {
-  margin-top: 24px;
-  @media (max-width: 768px) {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+  margin-top: 25px;
+  margin-bottom: 24px;
+  margin-left: 32px;
+}
+
+@media (max-width: 768px) {
+  .brands__container {
+    grid-template-columns: repeat(6, 1fr);
+    margin-left: 24px;
   }
 
-  @media (max-width: 320px) {
+  .brands__container .brands__section--cont:nth-child(n + 7) {
+    display: none;
+  }
+}
+
+@media (max-width: 320px) {
+  .brands__container {
     display: none;
   }
 }
@@ -15,8 +25,8 @@
   display: none;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
-  gap: 16px 32px;
-  margin-left: 32px;
+  gap: 16px 0px;
+  margin-top: 18px;
   margin-bottom: 46px;
   @media (max-width: 768px) {
     display: grid;
@@ -29,11 +39,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 16px 32px;
-  margin-bottom: 24px;
-  margin-top: 24px;
-  margin-left: 32px;
-  margin-top: 24px;
+  gap: 16px 0px;
   @media (max-width: 768px) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -54,6 +60,9 @@
   height: 72px;
   border: 1px solid rgba(234, 234, 234, 1);
   border-radius: 6px;
+  @media (max-width: 768px) {
+    width: 224px;
+  }
 }
 
 .brands__section--logo {
@@ -70,12 +79,25 @@
   display: flex;
   align-items: center;
   width: 133px;
-  padding-top: 7px;
-  margin-left: 27px;
+  margin-left: 33px;
   gap: 0px 5px;
   border-width: 0px;
   background-color: rgba(248, 248, 248, 1);
+  @media (max-width: 768px) {
+    margin-left: 24px;
+    gap: 0px 6px;
+  }
   @media (min-width: 0) and (max-width: 320px) {
     display: none;
   }
+}
+
+.buttontext {
+  font-family: "TT Lakes";
+  src: local("TT Lakes Medium"), local("TT-Lakes-Medium"),
+    url("/font/TTLakes-Medium.woff2") format("woff2"),
+    url("/font/TTLakes-Medium.woff") format("woff"),
+    url("/font/TTLakes-Medium.ttf") format("truetype");
+  font-size: 16px;
+  line-height: 24px;
 }
